# sw-lib-gap

./: .gitignore  CMakeLists.txt
lib/googletest/: CMakeLists.txt
net/: CMakeLists.txt
net/tcp/: client.h  server.h
net/utils/: endpoint.cpp  endpoint.h
process/: CMakeLists.txt  process.cpp  process.h
src/: CMakeLists.txt
src/log/: CMakeLists.txt  log.cpp  log.h
src/net/: CMakeLists.txt
src/net/tcp/: client.cpp  client.h  connection.cpp  connection.h  server.cpp  server.h  socket.cpp  socket.h
src/net/utils/: buffer.cpp  buffer.h  endpoint.cpp  endpoint.h
src/process/: CMakeLists.txt  event_consumer.h  event_provider.cpp  event_provider.h  process.cpp  process.h  signal_handler.cpp  signal_handler.h
src/utils/: CMakeLists.txt  flags.h
template/: CMakeLists.txt  CMakePresets.json
template/src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  client_server_app.cpp  client_server_app.h
tests/process/: signal_handler.cpp
tests/tcp/: client_server_app.cpp  client_server_app.h
tests/utils/: buffer.cpp
